# AndroidGameActivity-C

./: .editorconfig  .gitignore  README.md  UnityBuild.c  UnityBuild.cpp  build.bat
NativeLib/: .gitignore  settings.gradle
NativeLib/app/: build.gradle
NativeLib/app/src/main/: AndroidManifest.xml
NativeLib/app/src/main/cpp/: CMakeLists.txt  GameActivitySources.cpp  GameActivitySourcesC.c  Renderer.cpp  game-activity  main.cpp
NativeLib/app/src/main/java/com/coolzrz/nativelib/: MainActivity.java
NativeLib/gradle/wrapper/: gradle-wrapper.properties
